Continuação do curso

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -27,5 +27,33 @@
         <p>Ut enim ad minim veniam, <em>quis nostrud exercitation</em> ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
         <!-- Comentário usando o atalho do VSCode: Ctrl + / -->
+
+        <!-- Criando uma lista não ordenada -->
+         <p>O QUE PRECISO FAZER</p>
+         <ul>
+            <li>Fazer o curso cs50x da harvard</li>
+            <li>Terminar os fundamentos do The Odin Project para seguir um dos caminhos</li>
+         </ul>
+         
+         <!-- Criando uma lista ordenada -->
+          <p>FILMES FAVORITOS</p>
+          <ol>
+            <li>The Mirror - Tarkovsky</li>
+            <li>Pierrot le Fou - Godard</li>
+            <li>Terra em Transe - Glauber Rocha</li>
+            <li>The End of Evangelion - Hideaki Anno</li>
+          </ol>
+
+          <!-- Posso colocar para começar em alguma ordem -->
+          <ol start="30">
+            <li>item 30</li>
+          </ol>
+
+          <!-- Ou para ser reverso -->
+           <ol reversed>
+            <li>3 lugar</li>
+            <li>2 lugar</li>
+            <li>1 lugar</li>
+           </ol>
     </body>
 </html>
