--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -10,5 +10,13 @@
     <p><a>Sobre o Odin Project</a></p>
     <!-- só o <a> faz nada, preciso do atributo href -->
     <a href="https://www.theodinproject.com/about">Sobre o Odin Project</a>
+    <!--Abrir o link em outra página -->
+    <p><a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">Sobre o Odin Project</a></p>
+    <!--Abrir o link relativo -->
+    <p><a href="about.html">About - mesmo diretório</a></p>
+    <!--Abrir o link relativo em outro diretório -->
+    <p><a href="sobre/sobre.html">Sobre - outro diretório</a></p>
+    <!-- Adicionar uma imagem -->
+    <p><img src="./imagens/dog.jpg" alt="Cachorrinho fofo" height="310" width="310"></p>
 </body>
 </html>
